@@ -1,3 +1,9 @@
+1999-10-20  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* FileAccess.cc: (AnonymousLogin) reset cwd and home.
+	* Http.h, Http.cc: add HFtp::Login; don't send password in URI.
+	* commands.cc: do Login after Connect, not reverse.
+
 1999-10-19  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* HttpDir.cc: set hour/minute to 0 if they are not available.
